Fix overflow scrolling on iOS Safari

--- a/frontend/src/features/BurgerMenu/ui/BurgerMenu.module.scss
+++ b/frontend/src/features/BurgerMenu/ui/BurgerMenu.module.scss
@@ -15,6 +15,7 @@
   justify-content: space-between;
 
   text-transform: uppercase;
+  touch-action: none;
 }
 
 .socials {
@@ -31,6 +32,8 @@
   padding-right: 10px;
 
   overflow-y: auto;
+
+  touch-action: pan-y;
 }
 
 .item {
